--- a/src/main/resources/static/css/boardlist.css
+++ b/src/main/resources/static/css/boardlist.css
@@ -1,3 +1,25 @@
-.table {
-  width: 500px;
-}
+a {
+  text-decoration: none;
+  color: black;
+  }
+  .table {
+      width: 1100px;
+      margin: 0% auto;
+  }
+  .pagination-container {
+      text-align: center; /* 가로 중앙 정렬 */
+  }
+
+  .pagination-container > a {
+      display: inline-block; /* inline-block으로 처리 */
+      padding: 5px 10px;
+      margin: 0 5px;
+      text-decoration: none;
+      border-radius: 5px;
+  }
+  .button {
+      border-radius: 5px;
+  }
+  .form-control {
+      width: 500px;
+  }
