--- a/src/main/resources/templates/boardwrite.html
+++ b/src/main/resources/templates/boardwrite.html
@@ -32,7 +32,7 @@
             <input name="title" type="text">
             <textarea name="content" style="resize: none"></textarea>
             <input type="file" name="file">
-            <button type="submit">작성</button>
+            <button class="btn btn-primary rounded-pill px-3 mt-3" type="submit" style="color: white; text-align: end;">작성</button>
         </form>
     </div>
     <div th:replace="~{layout/footer}"></div>
