--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -20,13 +20,9 @@
           </a>
     
           <ul class="nav nav-pills">  
-            <li class="nav-item"><a href="introduce.php" class="nav-link text-black">회사소개</a></li>
+            <li class="nav-item"><a href="/introduce" class="nav-link text-black">회사소개</a></li>
             <li class="nav-item"><a href="/board/list" class="nav-link text-black">게시판</a></li>
-            <li class="nav-item"><a href="history.php" class="nav-link text-black">연혁</a></li>
-            <li class="nav-item"><a href="services.php" class="nav-link text-black">서비스</a></li>
-            <li class="nav-item"><a href="solution.php" class="nav-link text-black">솔루션</a></li>
-            <li class="nav-item"><a href="recruit.php" class="nav-link text-black">채용</a></li>
-            <li class="nav-item"><a href="contact.php" class="nav-link text-black">문의하기</a></li>
+            <li class="nav-item"><a href="/history" class="nav-link text-black">연혁</a></li>
           </ul>
       </div>
     
