--- a/src/main/resources/templates/boardview.html
+++ b/src/main/resources/templates/boardview.html
@@ -7,21 +7,28 @@
 <body>
 <div th:replace="layout/header :: navbar"></div>
 
-<h1 th:text="${board.title}">제목입니다.</h1>
-<p th:text="${board.content}">내용이 들어갈 부분입니다.</p>
-
-<!-- 이미지가 있다면 표시 -->
-<div>
-    <img th:if="${board.filepath}" th:src="@{${board.filepath}}" alt="게시글 이미지" style="max-width:100%; height:auto;" />
+<h1 th:text="${board.title}" style="text-align: center; font-size: 35px;">제목입니다.</h1>
+<hr style="border: 1px;">
+<div class="box" style="border: 1px solid; margin: 0% auto; max-width: 850px;">
+        <p class="mt-3 mb-3" th:text="${board.content}" style="max-width: 800px; text-align: center; white-space: pre-wrap; margin: 0% auto;">내용이 들어갈 부분입니다.</p>
+    <!-- 이미지가 있다면 표시 -->
+    <div class="mb-3" style="text-align: center;">
+        <img th:if="${board.filepath}" th:src="@{${board.filepath}}" alt="게시글 이미지" style="max-width:100%; height:auto;" />
+    </div>
 </div>
+    <div class="find-btn" style="text-align: center; margin-top: 50px;">
+        <button class="btn btn-primary rounded-pill px-3">
+        <a th:href="@{${board.filepath}}" style="text-decoration: none; color: white;">다운받기</a>
+        </button>
+        <button class="btn btn-primary rounded-pill px-3">
+        <a th:href="@{/board/modify/{id}(id = ${board.id})}" style="text-decoration: none; color: white;">수정</a>
+        </button>
 
-<a th:href="@{${board.filpath}}">다운받기</a>
-<a th:href="@{/board/modify/{id}(id = ${board.id})}">수정</a>
-
-<!-- 삭제 버튼 추가 -->
-<form th:action="@{/board/delete/{id}(id=${board.id})}" method="post" onsubmit="return confirm('정말 삭제하시겠습니까?');">
-    <button type="submit" class="btn btn-danger">삭제</button>
-</form>
+        <!-- 삭제 버튼 추가 -->
+        <form th:action="@{/board/delete/{id}(id=${board.id})}" method="post" onsubmit="return confirm('정말 삭제하시겠습니까?');">
+            <button type="submit" class="btn btn-danger rounded-pill px-3 mt-2">삭제</button>
+        </form>
+    </div>
 
 <div th:replace="~{layout/footer}"></div>
 </body>
