--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -23,6 +23,8 @@
             <li class="nav-item"><a href="/introduce" class="nav-link text-black">회사소개</a></li>
             <li class="nav-item"><a href="/board/list" class="nav-link text-black">게시판</a></li>
             <li class="nav-item"><a href="/history" class="nav-link text-black">연혁</a></li>
+            <li class="nav-item"><a href="/login" class="nav-link text-black">로그인</a></li>
+            <li class="nav-item"><a href="/stipulation" class="nav-link active" aria-current="page">회원가입</a></li>
           </ul>
       </div>
     
