--- a/src/main/resources/templates/boardlist.html
+++ b/src/main/resources/templates/boardlist.html
@@ -5,7 +5,7 @@
 </head>
 <head>
     <link rel="stylesheet" th:href="@{/css/boardlist.css}" type="text/css">
-    <title>게시글 리스트 페이지</title>
+    <title>게시판</title>
 </head>
 <style>
 </style>
