--- a/src/main/resources/templates/boardview.html
+++ b/src/main/resources/templates/boardview.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layout/header :: head">
     <meta charset="UTF-8">
-    <title th:text="${title} ?: '게시판'"></title>
 </head>
+<head><title th:text="${board.title} + ' : 게시판' ?: '게시판'"></title></head>
 <body>
 <div th:replace="layout/header :: navbar"></div>
 
