--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
    
 </head>
 <head>
-    <title>사이트</title>
+    <title>SpringBoot</title>
     <link rel="stylesheet" th:href="@{/css/home.css}" type="text/css">
 </head>
 <body>
